File: components/nexus-security/src/main/java/org/sonatype/nexus/security/authz/WildcardPermission2.java