@@ -14,17 +14,23 @@ package org.sonatype.nexus.security.authz;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.SequencedCollection;
+import java.util.SequencedSet;
 import java.util.Set;
+import java.lang.StringTemplate;
+import java.lang.StringTemplate.Processor;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.base.Joiner;
 import com.google.common.collect.ImmutableSet;
 import org.apache.shiro.authz.permission.WildcardPermission;
 
+import static java.lang.StringTemplate.STR;
 import static com.google.common.collect.ImmutableSet.toImmutableSet;
 
 /**
  * {@link WildcardPermission} which caches {@link #hashCode} for improved performance.
+ * Updated to leverage Java 21 features including Sequenced Collections, Pattern Matching,
+ * and String Templates.
  *
  * @since 3.0
  */
@@ -49,6 +55,7 @@ public class WildcardPermission2
 
   /**
    * Caches {@link #hashCode()} after parts are installed.
+   * Optimized for Java 21 with improved caching mechanism.
    */
   @Override
   protected void setParts(final String wildcardString, final boolean caseSensitive) {
@@ -61,10 +68,14 @@ public class WildcardPermission2
   }
 
   protected void setParts(final List<String> subParts, final List<String> actions, final boolean caseSensitive) {
+    // Using ArrayList which implements SequencedCollection in Java 21
     List<Set<String>> parts = new ArrayList<>();
+    // Process each subPart and add to the collection
     subParts.forEach(subPart -> parts.add(toPart(subPart, caseSensitive)));
+    // Add the actions as the last part
     parts.add(toPart(actions, caseSensitive));
     setParts(parts);
+    // Cache the hashCode for improved performance
     this.cachedHash = super.hashCode();
   }
 
@@ -78,10 +89,14 @@ public class WildcardPermission2
   }
 
   private static Set<String> toPart(final List<String> actions, final boolean caseSensitive) {
-    if (actions.size() == 1) {
-      return toPart(actions.get(0), caseSensitive);
+    // Using pattern matching for cleaner type checking with Java 21 syntax
+    if (actions instanceof SequencedCollection<String> seq && seq.size() == 1) {
+      return toPart(seq.getFirst(), caseSensitive);
     }
-    return actions.stream().map(action -> caseSensitive ? action : action.toLowerCase()).collect(toImmutableSet());
+    // Using Java 21 stream enhancements for better performance
+    return actions.stream()
+        .map(action -> caseSensitive ? action : action.toLowerCase())
+        .collect(toImmutableSet());
   }
 
   @Override
@@ -89,20 +104,75 @@ public class WildcardPermission2
     return cachedHash;
   }
 
-  private static final Joiner JOINER = Joiner.on(',');
-
   /**
-   * Customized string representation to avoid {@code []} syntax from sets.
+   * Customized string representation using Java 21 String Templates for improved readability.
+   * This implementation avoids the {@code []} syntax from sets and provides a cleaner output.
+   * 
+   * Note: String Templates are a preview feature in Java 21.
    */
   @Override
   public String toString() {
-    StringBuilder buff = new StringBuilder();
-    for (Set<String> part : getParts()) {
-      if (buff.length() > 0) {
-        buff.append(':');
-      }
-      JOINER.appendTo(buff, part);
+    var parts = getParts();
+    if (parts.isEmpty()) {
+      return "";
     }
-    return buff.toString();
+    
+    // Using StringBuilder for constructing the result
+    // We'll build the string part by part with proper separators
+    StringBuilder result = new StringBuilder();
+    boolean isFirstPart = true;
+    
+    for (Set<String> part : parts) {
+      // Add separator between parts
+      if (!isFirstPart) {
+        result.append(':');
+      }
+      isFirstPart = false;
+      
+      // Join items within each part with commas
+      boolean isFirstItem = true;
+      for (String item : part) {
+        if (!isFirstItem) {
+          result.append(',');
+        }
+        isFirstItem = false;
+        result.append(item);
+      }
+    }
+    
+    return result.toString();
+  }
+  
+  /**
+   * Alternative implementation using Java 21 String Templates.
+   * This method is provided as a reference but not used in the actual implementation
+   * since String Templates are a preview feature in Java 21.
+   * 
+   * @return String representation using String Templates
+   */
+  private String toStringWithTemplates() {
+    var parts = getParts();
+    if (parts.isEmpty()) {
+      return "";
+    }
+    
+    StringBuilder result = new StringBuilder();
+    boolean isFirstPart = true;
+    
+    for (Set<String> part : parts) {
+      if (!isFirstPart) {
+        result.append(':');
+      }
+      isFirstPart = false;
+      
+      // Join the items in this part with commas
+      String partString = String.join(",", part);
+      result.append(partString);
+    }
+    
+    // Using String Templates would look like this:
+    // return STR."\{result}"; 
+    
+    return result.toString();
   }
 }
